# Mixed-HIL-PID

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  Mixed_HIL_Professional_Documentation.md  README.md  TUI_README.md  bayesian_optimization.py  bo_hil_updated.py  config.yaml  de_hil_updated.py  differential_evolution.py  explain.md  flowchart.md  main.py  main_bo_hil.py  main_de_hil.py  main_macos.py  main_sanity_check_macos.py  main_sanity_check_macos_autorun.py  methodolgy.md  prompt.txt  pyproject.toml  requirements.txt  run_hil.sh  run_tui.py  todo.md  visualizer.py  visualizer_macos.py  visualizer_single.py
Vdata_for_paper/mermaid_code/simplified_for_paper/: Fig1_system_architecture.mmd  Fig2_sequence_diagram.mmd  Fig3_complete_flowchart.mmd  Fig4_workflow_prefer_DE.mmd  Fig5_workflow_prefer_BO.mmd  Fig6_workflow_tie_refine.mmd  Fig7_workflow_reject_expand.mmd  Fig8_equation_dependencies.mmd
Vdata_for_paper/pseudocode/: QUICK_REFERENCE.md  README.md  condensed_for_paper.md  human_feedback_taxonomy.md  mixed_hil_pseudocode.md
mixed_hil_pid/: __main__.py  config_loader.py  experiment_executor.py  gui.py  logger.py  metrics.py  simulator.py  utils.py
mixed_hil_pid/apps/: tui.py
mixed_hil_pid/optimizers/: bayesian_optimizer.py  differential_evolution.py
mixed_hil_pid/scripts/: README.md  bo_hil_rerun.py  bo_vanilla_rerun.py  de_hil_rerun.py  de_vanilla_rerun.py  mixed_hil_rerun.py  optimizers_sanity_check.py
models/: tmp.txt
results/sanity_check/: tmp.txt
